# yamlium

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build_release.yml  test.yml
tests/: test_everything.yaml  test_lexer.py  test_nodes.py  test_parser.py  test_parser_to_json.py  test_root_functions.py  test_security.py  test_yaml_manipulation.py
yamlium/: __init__.py  lexer.py  nodes.py  parser.py
